making training loop work

--- a/final.ipynb
+++ b/final.ipynb
@@ -1043,9 +1043,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lVNqY1SMg17e",
+        "id": "YKgjMKYeh7yN",
         "colab_type": "code",
         "colab": {}
+      },
+      "source": [
+        "class Arguments():\n",
+        "  def __init__(self,gpu = None,gantype = 'zerogp',model_name = 'SinGan', batch_size = 128, img_size_max= 250, img_size_min=20,\n",
+        "               load_model = None, multiprocessing_distributed= None, world_size=1, log_dir= None, res_dir = None, num_scale = None):\n",
+        "    self.gpu = gpu\n",
+        "    self.gantype = gantype\n",
+        "    self.model_name = \"SinGan\"\n",
+        "    self.batch_size = batch_size\n",
+        "    self.img_size_max= img_size_max\n",
+        "    self.img_size_min=img_size_min\n",
+        "    self.load_model = load_model\n",
+        "    self.multiprocessing_distributed= multiprocessing_distributed \n",
+        "    self.world_size=world_size\n",
+        "    self.log_dir= log_dir\n",
+        "    self.res_dir = res_dir \n",
+        "    self.num_scale = num_scale \n",
+        "    self.stage = None\n",
+        "    self.distributed = None\n",
+        "    self.workers = 8\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a_RVMJm6mlbE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def makedirs(path):\n",
+        "    if not os.path.exists(path):\n",
+        "        os.makedirs(path)\n",
+        "def formatted_print(notice, value):\n",
+        "    print('{0:<40}{1:<40}'.format(notice, value))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lVNqY1SMg17e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 531
+        },
+        "outputId": "a4e46bbe-eac0-40c3-df0f-4749d543fc4c"
       },
       "source": [
         "import argparse\n",
@@ -1053,7 +1105,6 @@
         "from datetime import datetime\n",
         "from glob import glob\n",
         "from shutil import copyfile\n",
-        "from datasets.datasetgetter import get_dataset\n",
         "\n",
         "import torch\n",
         "from torch import autograd\n",
@@ -1067,107 +1118,70 @@
         "import torch.utils.data\n",
         "import torch.utils.data.distributed\n",
         "\n",
-        "from models.generator import Generator\n",
-        "from models.discriminator import Discriminator\n",
+        "args = Arguments()\n",
+        "args.gpu=0\n",
+        "args.distributed = False\n",
+        "args.load_model = None\n",
+        "args.batch_size = 32\n",
         "\n",
-        "from train import *\n",
-        "from validation import *\n",
-        "\n",
-        "from utils import *\n",
-        "\n",
-        "parser = argparse.ArgumentParser(description='PyTorch Simultaneous Training')\n",
-        "parser.add_argument('--data_dir', default='../data/', help='path to dataset')\n",
-        "parser.add_argument('--dataset', default='PHOTO', help='type of dataset', choices=['PHOTO'])\n",
-        "parser.add_argument('--gantype', default='zerogp', help='type of GAN loss', choices=['wgangp', 'zerogp', 'lsgan'])\n",
-        "parser.add_argument('--model_name', type=str, default='SinGAN', help='model name')\n",
-        "parser.add_argument('--workers', default=8, type=int, help='number of data loading workers (default: 8)')\n",
-        "parser.add_argument('--batch_size', default=1, type=int,\n",
-        "                    help='Total batch size - e.g) num_gpus = 2 , batch_size = 128 then, effectively, 64')\n",
-        "parser.add_argument('--val_batch', default=1, type=int)\n",
-        "parser.add_argument('--img_size_max', default=250, type=int, help='Input image size')\n",
-        "parser.add_argument('--img_size_min', default=25, type=int, help='Input image size')\n",
-        "parser.add_argument('--img_to_use', default=-999, type=int, help='Index of the input image to use < 6287')\n",
-        "parser.add_argument('--load_model', default=None, type=str, metavar='PATH',\n",
-        "                    help='path to latest checkpoint (default: None)')\n",
-        "parser.add_argument('--validation', dest='validation', action='store_true',\n",
-        "                    help='evaluate model on validation set')\n",
-        "parser.add_argument('--test', dest='test', action='store_true',\n",
-        "                    help='test model on validation set')\n",
-        "parser.add_argument('--world-size', default=1, type=int,\n",
-        "                    help='number of nodes for distributed training')\n",
-        "parser.add_argument('--rank', default=0, type=int,\n",
-        "                    help='node rank for distributed training')\n",
-        "parser.add_argument('--gpu', default=None, type=str,\n",
-        "                    help='GPU id to use.')\n",
-        "parser.add_argument('--multiprocessing-distributed', action='store_true',\n",
-        "                    help='Use multi-processing distributed training to launch '\n",
-        "                         'N processes per node, which has N GPUs. This is the '\n",
-        "                         'fastest way to use PyTorch for either single node or '\n",
-        "                         'multi node data parallel training')\n",
-        "parser.add_argument('--port', default='8888', type=str)\n",
+        "if args.gpu is not None:\n",
+        "   \n",
+        "    warnings.warn('You have chosen a specific GPU. This will completely '\n",
+        "                  'disable data parallelism.')\n",
+        "\"\"\"\n",
+        "args.distributed = args.world_size > 1 or args.multiprocessing_distributed\n",
         "\n",
         "\n",
-        "def main():\n",
-        "    args = parser.parse_args()\n",
+        "\"\"\"\n",
+        "ngpus_per_node = torch.cuda.device_count()\n",
+        "args.load_model = None\n",
+        "if args.load_model is None:\n",
+        "    args.model_name = '{}_{}'.format(args.model_name, datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
+        "else:\n",
+        "    args.model_name = args.load_model\n",
         "\n",
-        "    if args.gpu is not None:\n",
-        "        os.environ['CUDA_VISIBLE_DEVICES'] = args.gpu\n",
-        "        warnings.warn('You have chosen a specific GPU. This will completely '\n",
-        "                      'disable data parallelism.')\n",
+        "makedirs('./logs')\n",
+        "makedirs('./results')\n",
         "\n",
-        "    args.distributed = args.world_size > 1 or args.multiprocessing_distributed\n",
+        "args.log_dir = os.path.join('./logs', args.model_name)\n",
+        "args.res_dir = os.path.join('./results', args.model_name)\n",
         "\n",
-        "    ngpus_per_node = torch.cuda.device_count()\n",
+        "makedirs(args.log_dir)\n",
+        "makedirs(os.path.join(args.log_dir, 'codes'))\n",
+        "makedirs(os.path.join(args.log_dir, 'codes', 'models'))\n",
+        "makedirs(args.res_dir)\n",
         "\n",
-        "    if args.load_model is None:\n",
-        "        args.model_name = '{}_{}'.format(args.model_name, datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
-        "    else:\n",
-        "        args.model_name = args.load_model\n",
+        "if args.load_model is None:\n",
+        "    pyfiles = glob(\"./*.py\")\n",
+        "    modelfiles = glob('./models/*.py')\n",
+        "    for py in pyfiles:\n",
+        "        copyfile(py, os.path.join(args.log_dir, 'codes') + \"/\" + py)\n",
+        "    for py in modelfiles:\n",
+        "        copyfile(py, os.path.join(args.log_dir, 'codes', py[2:]))\n",
         "\n",
-        "    makedirs('./logs')\n",
-        "    makedirs('./results')\n",
+        "formatted_print('Total Number of GPUs:', ngpus_per_node)\n",
+        "formatted_print('Total Number of Workers:', args.workers)\n",
+        "formatted_print('Batch Size:', args.batch_size)\n",
+        "formatted_print('Max image Size:', args.img_size_max)\n",
+        "formatted_print('Min image Size:', args.img_size_min)\n",
+        "formatted_print('Log DIR:', args.log_dir)\n",
+        "formatted_print('Result DIR:', args.res_dir)\n",
+        "formatted_print('GAN TYPE:', args.gantype)\n",
         "\n",
-        "    args.log_dir = os.path.join('./logs', args.model_name)\n",
-        "    args.res_dir = os.path.join('./results', args.model_name)\n",
-        "\n",
-        "    makedirs(args.log_dir)\n",
-        "    makedirs(os.path.join(args.log_dir, 'codes'))\n",
-        "    makedirs(os.path.join(args.log_dir, 'codes', 'models'))\n",
-        "    makedirs(args.res_dir)\n",
-        "\n",
-        "    if args.load_model is None:\n",
-        "        pyfiles = glob(\"./*.py\")\n",
-        "        modelfiles = glob('./models/*.py')\n",
-        "        for py in pyfiles:\n",
-        "            copyfile(py, os.path.join(args.log_dir, 'codes') + \"/\" + py)\n",
-        "        for py in modelfiles:\n",
-        "            copyfile(py, os.path.join(args.log_dir, 'codes', py[2:]))\n",
-        "\n",
-        "    formatted_print('Total Number of GPUs:', ngpus_per_node)\n",
-        "    formatted_print('Total Number of Workers:', args.workers)\n",
-        "    formatted_print('Batch Size:', args.batch_size)\n",
-        "    formatted_print('Max image Size:', args.img_size_max)\n",
-        "    formatted_print('Min image Size:', args.img_size_min)\n",
-        "    formatted_print('Log DIR:', args.log_dir)\n",
-        "    formatted_print('Result DIR:', args.res_dir)\n",
-        "    formatted_print('GAN TYPE:', args.gantype)\n",
-        "\n",
-        "    if args.multiprocessing_distributed:\n",
-        "        args.world_size = ngpus_per_node * args.world_size\n",
-        "        mp.spawn(main_worker, nprocs=ngpus_per_node, args=(ngpus_per_node, args))\n",
-        "    else:\n",
-        "        main_worker(args.gpu, ngpus_per_node, args)\n",
+        "if args.multiprocessing_distributed:\n",
+        "    args.world_size = ngpus_per_node * args.world_size\n",
+        "    mp.spawn(main_worker, nprocs=ngpus_per_node, args=(ngpus_per_node, args))\n",
+        "else:\n",
+        "    main_worker(args.gpu, ngpus_per_node, args)\n",
         "\n",
         "\n",
         "def main_worker(gpu, ngpus_per_node, args):\n",
-        "    if len(args.gpu) == 1:\n",
-        "        args.gpu = 0\n",
-        "    else:\n",
-        "        args.gpu = gpu\n",
+        "    args.gpu = 0\n",
+        "\n",
         "\n",
         "    if args.gpu is not None:\n",
         "        print(\"Use GPU: {} for training\".format(args.gpu))\n",
-        "\n",
+        "    args.distributed = False\n",
         "    if args.distributed:\n",
         "        if args.multiprocessing_distributed:\n",
         "            args.rank = args.rank * ngpus_per_node + gpu\n",
@@ -1179,6 +1193,10 @@
         "    ################\n",
         "    # 4/3 : scale factor in the paper\n",
         "    scale_factor = 4/3\n",
+        "\n",
+        "    args.img_size_max = 512\n",
+        "    args.img_size_min = 64\n",
+        "\n",
         "    tmp_scale = args.img_size_max / args.img_size_min\n",
         "    args.num_scale = int(np.round(np.log(tmp_scale) / np.log(scale_factor)))\n",
         "    args.size_list = [int(args.img_size_min * scale_factor**i) for i in range(args.num_scale + 1)]\n",
@@ -1271,16 +1289,18 @@
         "    ###########\n",
         "    # Dataset #\n",
         "    ###########\n",
-        "    train_dataset, _ = get_dataset(args.dataset, args)\n",
+        "    transformed_dataset = CityscapeDataset(\n",
+        "                                           transforms=composed_transforms\n",
+        "                                           )\n",
         "\n",
         "    if args.distributed:\n",
         "        train_sampler = torch.utils.data.distributed.DistributedSampler(train_dataset)\n",
         "    else:\n",
         "        train_sampler = None\n",
         "\n",
-        "    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=args.batch_size,\n",
-        "                                               shuffle=(train_sampler is None), num_workers=args.workers,\n",
-        "                                               pin_memory=True, sampler=train_sampler)\n",
+        "    train_loder = DataLoader(transformed_dataset, batch_size = args.batch_size,\n",
+        "                            sampler=torch.utils.data.SequentialSampler(transformed_dataset) ,  num_workers=args.workers)\n",
+        "  \n",
         "\n",
         "    ######################\n",
         "    # Validate and Train #\n",
@@ -1384,12 +1404,46 @@
         "            if stage == args.num_scale:\n",
         "                check_list.close()\n",
         "\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    main()"
+        "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Total Number of GPUs:                   1                                       \n",
+            "Total Number of Workers:                8                                       \n",
+            "Batch Size:                             32                                      \n",
+            "Max image Size:                         250                                     \n",
+            "Min image Size:                         20                                      \n",
+            "Log DIR:                                ./logs/SinGan_2019-11-20_16-30-25       \n",
+            "Result DIR:                             ./results/SinGan_2019-11-20_16-30-25    \n",
+            "GAN TYPE:                               zerogp                                  \n",
+            "Use GPU: 0 for training\n",
+            "[64, 85, 113, 151, 202, 269, 359, 479]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:27: UserWarning: You have chosen a specific GPU. This will completely disable data parallelism.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-70-1c8677f7a02e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspawn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmain_worker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnprocs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mngpus_per_node\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mngpus_per_node\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m     \u001b[0mmain_worker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgpu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mngpus_per_node\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-38-a96f8cb9fab8>\u001b[0m in \u001b[0;36mmain_worker\u001b[0;34m(gpu, ngpus_per_node, args)\u001b[0m\n\u001b[1;32m    217\u001b[0m     \u001b[0;31m# Dataset #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m     \u001b[0;31m###########\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m     \u001b[0mtrain_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistributed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'get_dataset' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1409,13 +1463,29 @@
       "metadata": {
         "id": "f9C5Zl0yg1o7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        },
+        "outputId": "ba08bd2f-5a5a-4ed5-f7ce-6d07d5f4415b"
       },
       "source": [
-        ""
+        "len(1)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-31-1cf91bb60cc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
