--- a/final.ipynb
+++ b/final.ipynb
@@ -1272,7 +1272,7 @@
         "            train_sampler.set_epoch(stage)\n",
         "\n",
         "        trainSinGAN(train_loader, networks, {\"d_opt\": d_opt, \"g_opt\": g_opt}, stage, args, {\"z_rec\": z_fix_list})\n",
-        "        validateSinGAN(train_loader, networks, stage, args, {\"z_rec\": z_fix_list})\n",
+        "       # validateSinGAN(train_loader, networks, stage, args, {\"z_rec\": z_fix_list})\n",
         "\n",
         "        if args.distributed:\n",
         "            discriminator.module.progress()\n",
@@ -1358,7 +1358,7 @@
         "outputId": "83fd3801-72ce-4746-8b02-196cbddf9187",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 609
+          "height": 962
         }
       },
       "source": [
